# reader

./: .bumpversion.cfg  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yaml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
reader/: __init__.py  __main__.py  config.cfg  feed.py  viewer.py
src/reader/: __init__.py  __main__.py  config.toml  feed.py
tests/: realpython_20180919.xml  realpython_descriptions_20180919.xml  test_feed.py  test_viewer.py
